--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>J Academy<span>.</span></h1>
+        <h1>webdevelopment<span>.</span></h1>
       </a>
       <nav id="navbar" class="navbar">
         <ul>
